# rpaframework

./: .buildinfo  .flake8  .gitignore  CLAUDE.md  CNAME  Makefile  README.rst  conventions.html  genindex.html  index.html  latest.json  objects.inv  packages.html  py-modindex.html  pylintrc  pyproject.toml  python.json  releasenotes.html  releases.xml  search.html  searchindex.js  tasks.py  tasks_common.py
.claude/skills/: audit.md
.doctrees/: environment.pickle  index.doctree  packages.doctree  releasenotes.doctree
.doctrees/contributing/: conventions.doctree  guide.doctree  todos.doctree
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: assistant.yaml  aws.yaml  codeql-analysis.yml  core.yaml  dialogs.yaml  docs.yaml  google.yaml  hubspot.yaml  main.yaml  main.yml  openai.yaml  pdf.yaml  pip.yaml  python39.yml  recognition.yaml  release.yaml  sema4ai.yaml  trivy.yml  windows.yaml
_sources/: index.rst.txt  packages.rst.txt  releasenotes.rst.txt
_sources/libdoc/: FTP.rst.txt  (+19 more)
_static/: conf.py  cookie.js  custom.css  custom.js  robocorp.css  robocorp.js
builds/: rpaframework-12.8.0-py3-none-any.whl
config/: flake8  pylint
contributing/: conventions.html  guide.html  todos.html
examples/: README.md
extras/: Dockerfile  Dockerfile.nodriver
invocations/: __init__.py  analysis.py  bootstrap.py  build.py  config.py  docs.py  errors.py  libspec.py  requirements.txt  shell.py  util.py
json/: RPA_Archive.json  RPA_Browser.json  RPA_Cloud_AWS.json  RPA_Cloud_Azure.json  RPA_Cloud_Google.json  RPA_Database.json  RPA_Desktop.json  RPA_Desktop_Clipboard.json  RPA_Desktop_OperatingSystem.json  RPA_Desktop_Windows.json  RPA_Desktop_utils.json  RPA_Dialogs.json  RPA_Email_Exchange.json  RPA_Email_ImapSmtp.json  RPA_Excel_Application.json  RPA_Excel_Files.json  RPA_FTP.json  RPA_FileSystem.json  RPA_HTTP.json  RPA_Images.json  RPA_JSON.json  RPA_Netsuite.json  RPA_Notifier.json  RPA_Outlook_Application.json  RPA_PDF.json  RPA_Robocloud_Items.json  RPA_Robocloud_Secrets.json  RPA_RobotLogListener.json  RPA_SAP.json  RPA_Salesforce.json  RPA_Slack.json  RPA_Tables.json  RPA_Tasks.json  RPA_Twitter.json  RPA_Word_Application.json  latest.json
libdoc/: Archive.html  Browser.html  Database.html  Desktop.html  Dialogs.html  FTP.html  FileSystem.html  HTTP.html  Images.html  JSON.html  Netsuite.html  Notifier.html  PDF.html  RPA_Archive.html  RPA_Assistant.html  RPA_Base64AI.html  RPA_Browser.html  RPA_Browser_Playwright.html  RPA_Browser_Selenium.html  RPA_Browser_common.html  RPA_Calendar.html  RPA_Cloud_AWS.html  RPA_Cloud_AWS_textract.html  RPA_Cloud_Azure.html  RPA_Cloud_Google.html  RPA_Crypto.html  RPA_Database.html  RPA_Desktop.html  RPA_Desktop_Clipboard.html  RPA_Desktop_OperatingSystem.html  RPA_Desktop_Windows.html  RPA_Desktop_utils.html  RPA_Dialogs.html  RPA_DocumentAI.html  RPA_DocumentAI_Base64AI.html  RPA_DocumentAI_DocumentAI.html  RPA_DocumentAI_Nanonets.html  RPA_Email_Exchange.html  RPA_Email_ImapSmtp.html  RPA_Email_common.html  (+46 more)
robot/: Archive.html  Browser.html  Database.html  Desktop.html  Dialogs.html  FTP.html  FileSystem.html  HTTP.html  Images.html  JSON.html  Netsuite.html  Notifier.html  PDF.html  RobotLogListener.html  SAP.html  Salesforce.html  Slack.html  Tables.html  Tasks.html  Twitter.html
tools/: api_changes.py  changelog.py  hub.py  latest.py  libdocext.py  merge.py  rss.py  setup.py  tag.py  todos.py  versions.py
(+662 files in other folders)
