[tool.poetry]
name = "rpaframework-meta"
version = "0.0.1"
description = "Metapackage for RPA Framework"
authors = ["RPA Framework <rpafw@robocorp.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
robotframework-browser = { version = "^14.4.1", python = ">=3.7,<4.0" }
rpaframework = { path = "packages/main", develop = true }
rpaframework-assistant = "^1.2.1"
rpaframework-aws = "^5.2.6"
rpaframework-dialogs = "^4.0.2"
rpaframework-google = "^7.0.0"
rpaframework-openai = "^1.0.2"
rpaframework-recognition = "^5.1.0"
rpaframework-windows = "^7.1.0"

[tool.poetry.dev-dependencies]
robotframeworklexer = "^1.1"
sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"
jinja2 = "^3.1.2"
markupsafe = "^2.1.1"
toml = "^0.10.2"
sphinx-markdown-builder = "^0.5.4"
robotframework-docgen = "^0.15.0"
pylint = "^2.4.4, <2.13"
sphinx-issues = "^3.0.1"
docutils = "0.16"
black = "^22.3.0"
invoke = "^1.6.0"
colorama = "^0.4.5"
keyring = "^23.9.0"
PyYAML = "^5.4.1"


[tool.poetry.group.dev.dependencies]
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.7"
sphinx-lint = "^0.6.6"

[build-system]
requires = ["setuptools", "poetry>=0.12"]
build-backend = "poetry.masonry.api"
