[tool.poetry]
name = "rpaframework-meta"
version = "0.0.1"
description = "Metapackage for RPA Framework"
authors = ["RPA Framework <rpafw@robocorp.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
robotframework-browser = { version = "^17.2.0", python = ">=3.8,<4.0" }
rpaframework = { path = "packages/main", develop = true }
rpaframework-assistant = "^4.0.0"
rpaframework-aws = "^6.0.0"
rpaframework-google = "^10.0.0"
rpaframework-hubspot = "^2.0.0"
rpaframework-openai = "^2.0.0"
rpaframework-recognition = "^6.0.0"
rpaframework-windows = "^9.0.0"
robotframework = "^5.0.1"

[tool.poetry.group.dev.dependencies]
rpaframework-devutils = { path = "packages/devutils/", develop = true }
sphinx = "^7.4.7"
sphinx-rtd-theme = "^3.0.2"
sphinx-markdown-builder = "^0.6.5"
sphinx-issues = "^3.0.1"
sphinx-lint = "^0.6.6"
robotframeworklexer = "^1.1"
docutils = "^0.21.2"
jinja2 = "^3.1.5"
markupsafe = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
