[project]
name = "rpaframework-meta"
version = "0.0.1"
description = "Metapackage for RPA Framework"
authors = [
	{name = "RPA Framework", email = "rpafw@robocorp.com"}
]
requires-python = ">3.9.1,<3.14"

dependencies = [
	"robotframework-browser>=17.2.0",
	"rpaframework",
	"rpaframework-assistant>=4.0.0",
	"rpaframework-aws>=6.0.0",
	"rpaframework-google>=10.0.0",
	"rpaframework-hubspot>=2.0.0",
	"rpaframework-openai>=2.0.0",
	"rpaframework-recognition>=6.0.0",
	"rpaframework-windows>=9.0.0",
	"robotframework>=5.0.1"
]

[dependency-groups]
dev = [
	"rpaframework-devutils",
	"sphinx>=7.4.7",
	"sphinx-rtd-theme>=3.0.2",
	"sphinx-markdown-builder>=0.6.5",
	"sphinx-issues>=3.0.1",
	"sphinx-lint>=0.6.6",
	"robotframeworklexer>=1.1",
	"docutils>=0.21.2",
	"jinja2>=3.1.5",
	"markupsafe>=2.1.1"
]

[tool.uv]
package = false
dev-dependencies = [
	"rpaframework-devutils"
]

[tool.uv.sources]
rpaframework = { path = "packages/main", editable = true }
rpaframework-devutils = { path = "packages/devutils", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
